[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/background.jpeg" type="Texture" id=1]
[ext_resource path="res://agents/Spaceship.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game_scene.gd" type="Script" id=3]
[ext_resource path="res://ui/UserInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/gameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://sfx/gameOver.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/bangSmall.wav" type="AudioStream" id=8]
[ext_resource path="res://effects/screenShake.tscn" type="PackedScene" id=9]
[ext_resource path="res://effects/Explosion.tscn" type="PackedScene" id=10]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 511, 299 )
current = true

[node name="screenShake" parent="camera" instance=ExtResource( 9 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UserInterface" parent="UI" instance=ExtResource( 4 )]

[node name="PauseOverlay" parent="UI/UserInterface" index="0"]
visible = false

[node name="gameOver" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="gameOverSound" type="AudioStreamPlayer" parent="UI/gameOver"]
stream = ExtResource( 6 )

[node name="Spaceship" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 534 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Asteroids" type="Node" parent="."]

[node name="Explosion" parent="Asteroids" instance=ExtResource( 10 )]

[node name="explosion" type="AudioStreamPlayer" parent="Asteroids"]
stream = ExtResource( 8 )

[node name="small" type="Node" parent="Asteroids"]

[node name="large" type="Node" parent="Asteroids"]

[editable path="UI/UserInterface"]
[editable path="Spaceship"]
